<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:textSize="44sp"
        android:gravity="center"
        android:id="@+id/text_view_weight_5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text="@string/text_weight_5" />

    <TextView
        android:textSize="34sp"
        android:gravity="center"
        android:id="@+id/text_view_weight_3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/text_weight_3" />

    <TextView
        android:textSize="24sp"
        android:gravity="center"
        android:id="@+id/text_view_weight_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_weight_1" />

</LinearLayout>